--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-wordcloud",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Word Cloud is a visual representation of word frequency and value. Use it to get instant insight into the most important terms in a set.",
   "repository": {
     "type": "git",
@@ -46,18 +46,17 @@
     "lodash.sortby": "^4.7.0",
     "lodash.toarray": "^4.4.0",
     "lodash.uniqby": "^4.7.0",
-    "powerbi-models": "^1.11.0",
-    "powerbi-visuals-utils-colorutils": "^2.3.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.4.1",
-    "powerbi-visuals-utils-formattingutils": "^4.7.1",
-    "powerbi-visuals-utils-svgutils": "^2.3.2",
-    "powerbi-visuals-utils-tooltiputils": "^2.5.2",
-    "powerbi-visuals-utils-typeutils": "^2.3.1"
+    "powerbi-models": "^1.12.6",
+    "powerbi-visuals-utils-colorutils": "^6.0.0",
+    "powerbi-visuals-utils-dataviewutils": "^6.0.0",
+    "powerbi-visuals-utils-formattingutils": "^6.0.0",
+    "powerbi-visuals-utils-svgutils": "^6.0.0",
+    "powerbi-visuals-utils-tooltiputils": "^6.0.0",
+    "powerbi-visuals-utils-typeutils": "^6.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.24.2",
     "@types/d3": "^7.4.0",
-    "@types/jasmine": "^4.0.3",
+    "@types/jasmine": "^4.3.1",
     "@types/karma": "^6.3.3",
     "@types/lodash.clone": "^4.5.7",
     "@types/lodash.difference": "^4.5.7",
@@ -74,35 +73,33 @@
     "@types/lodash.sortby": "^4.7.7",
     "@types/lodash.toarray": "^4.4.7",
     "@types/lodash.uniqby": "^4.7.7",
-    "@types/webpack": "4.39.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "coveralls": "3.0.6",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.21.0",
+    "@types/webpack": "^5.28.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.36.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
-    "jasmine": "^4.3.0",
-    "json-loader": "^0.5.7",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "3.1.0",
+    "jasmine": "^4.6.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "2.0.1",
-    "karma-junit-reporter": "1.2.0",
-    "karma-sourcemap-loader": "0.3.7",
+    "karma-jasmine": "^5.1.0",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-sourcemap-loader": "^0.4.0",
     "karma-typescript": "^5.5.3",
-    "karma-typescript-preprocessor": "0.4.0",
+    "karma-typescript-preprocessor": "^0.4.0",
     "karma-webpack": "^5.0.0",
-    "less": "3.10.2",
-    "less-loader": "^11.0.0",
-    "powerbi-visuals-api": "~4.7.0",
-    "powerbi-visuals-tools": "^4.0.5",
-    "powerbi-visuals-utils-testutils": "^2.6.0",
-    "regenerator-runtime": "0.13.3",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^8.4.0",
-    "ts-node": "8.3.0",
-    "tslint-microsoft-contrib": "6.2.0",
-    "webpack": "^5.74.0"
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "playwright": "^1.32.1",
+    "powerbi-visuals-api": "^5.3.0",
+    "powerbi-visuals-tools": "^4.2.1",
+    "powerbi-visuals-utils-testutils": "^6.0.0",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
+    "webpack": "^5.76.3"
   }
 }
