--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
     "lodash.toarray": "^4.4.0",
     "lodash.uniqby": "^4.7.0",
     "powerbi-models": "^1.12.6",
-    "powerbi-visuals-utils-colorutils": "^6.0.0",
-    "powerbi-visuals-utils-dataviewutils": "^6.0.0",
-    "powerbi-visuals-utils-formattingutils": "^6.0.0",
-    "powerbi-visuals-utils-svgutils": "^6.0.0",
-    "powerbi-visuals-utils-tooltiputils": "^6.0.0",
-    "powerbi-visuals-utils-typeutils": "^6.0.0"
+    "powerbi-visuals-utils-colorutils": "^6.0.1",
+    "powerbi-visuals-utils-dataviewutils": "^6.0.1",
+    "powerbi-visuals-utils-formattingmodel": "^5.0.0",
+    "powerbi-visuals-utils-formattingutils": "^6.0.1",
+    "powerbi-visuals-utils-svgutils": "^6.0.1",
+    "powerbi-visuals-utils-tooltiputils": "^6.0.1",
+    "powerbi-visuals-utils-typeutils": "^6.0.1"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
@@ -74,14 +75,14 @@
     "@types/lodash.toarray": "^4.4.7",
     "@types/lodash.uniqby": "^4.7.7",
     "@types/webpack": "^5.28.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "css-loader": "^6.7.3",
-    "eslint": "^8.36.0",
+    "eslint": "^8.39.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
     "jasmine": "^4.6.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
@@ -92,14 +93,14 @@
     "karma-webpack": "^5.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "playwright": "^1.32.1",
-    "powerbi-visuals-api": "^5.3.0",
-    "powerbi-visuals-tools": "^4.2.1",
-    "powerbi-visuals-utils-testutils": "^6.0.0",
+    "playwright": "^1.32.3",
+    "powerbi-visuals-api": "~5.4.0",
+    "powerbi-visuals-tools": "^4.3.0",
+    "powerbi-visuals-utils-testutils": "^6.0.1",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "webpack": "^5.76.3"
+    "typescript": "^4.9.5",
+    "webpack": "^5.81.0"
   }
 }
