--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-wordcloud",
-  "version": "2.0.0",
+  "version": "2.2.0.0",
   "description": "Word Cloud is a visual representation of word frequency and value. Use it to get instant insight into the most important terms in a set.",
   "repository": {
     "type": "git",
@@ -13,10 +13,11 @@
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
-    "lint": "node node_modules/tslint/bin/tslint \"+(src|test)/**/*.ts\"",
+    "lint": "npm run eslint",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz",
     "test": "karma start",
-    "cert": "pbiviz --install-cert"
+    "cert": "pbiviz --install-cert",
+    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "author": {
     "name": "Microsoft",
@@ -28,54 +29,72 @@
   },
   "homepage": "https://github.com/Microsoft/PowerBI-visuals-WordCloud#readme",
   "dependencies": {
-    "d3": "5.12.0",
-    "jquery": "3.4.1",
-    "lodash": "4.17.15",
-    "powerbi-visuals-utils-colorutils": "^2.2.1",
-    "powerbi-visuals-utils-dataviewutils": "^2.2.1",
-    "powerbi-visuals-utils-formattingutils": "^4.4.2",
-    "powerbi-visuals-utils-svgutils": "^2.2.1",
-    "powerbi-visuals-utils-tooltiputils": "^2.3.1",
-    "powerbi-visuals-utils-typeutils": "^2.2.1",
-    "powerbi-models": "^1.0.2"
+    "d3-selection": "^3.0.0",
+    "d3-transition": "^3.0.1",
+    "lodash.clone": "^4.5.0",
+    "lodash.difference": "^4.5.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.includes": "^4.3.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isempty": "^4.4.0",
+    "lodash.isstring": "^4.0.1",
+    "lodash.keys": "^4.2.0",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.maxby": "^4.6.0",
+    "lodash.minby": "^4.6.0",
+    "lodash.range": "^3.2.0",
+    "lodash.sortby": "^4.7.0",
+    "lodash.toarray": "^4.4.0",
+    "lodash.uniqby": "^4.7.0",
+    "powerbi-visuals-utils-colorutils": "^6.0.1",
+    "powerbi-visuals-utils-formattingmodel": "^5.0.1",
+    "powerbi-visuals-utils-formattingutils": "^6.0.1",
+    "powerbi-visuals-utils-svgutils": "^6.0.1",
+    "powerbi-visuals-utils-tooltiputils": "^6.0.1",
+    "powerbi-visuals-utils-typeutils": "^6.0.1"
   },
   "devDependencies": {
-    "@types/d3": "5.7.2",
-    "@types/jasmine": "3.4.0",
-    "@types/jasmine-jquery": "1.5.33",
-    "@types/jquery": "3.3.31",
-    "@types/karma": "3.0.3",
-    "@types/lodash": "4.14.139",
-    "@types/webpack": "4.39.0",
-    "core-js": "3.2.1",
-    "coveralls": "3.0.6",
-    "css-loader": "3.2.0",
-    "istanbul-instrumenter-loader": "3.0.1",
-    "jasmine": "3.5.0",
-    "jasmine-jquery": "2.1.1",
-    "json-loader": "^0.5.7",
-    "karma": "4.3.0",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.1",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "2.0.1",
-    "karma-junit-reporter": "1.2.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "4.1.1",
-    "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "4.0.2",
-    "less": "3.10.2",
-    "powerbi-visuals-api": "~2.6.1",
-    "powerbi-visuals-tools": "3.1.5",
-    "powerbi-visuals-utils-testutils": "2.2.1",
-    "puppeteer": "^1.5.0",
-    "regenerator-runtime": "0.13.3",
-    "style-loader": "1.0.0",
-    "ts-loader": "6.0.4",
-    "ts-node": "8.3.0",
-    "tslint": "5.19.0",
-    "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "3.6.2",
-    "webpack": "4.39.2"
+    "@types/d3": "^7.4.0",
+    "@types/jasmine": "^4.3.5",
+    "@types/karma": "^6.3.4",
+    "@types/lodash.clone": "^4.5.7",
+    "@types/lodash.difference": "^4.5.7",
+    "@types/lodash.flatten": "^4.4.7",
+    "@types/lodash.includes": "^4.3.7",
+    "@types/lodash.isarray": "^4.0.7",
+    "@types/lodash.isempty": "^4.4.7",
+    "@types/lodash.isstring": "^4.0.7",
+    "@types/lodash.keys": "^4.2.7",
+    "@types/lodash.mapvalues": "^4.6.7",
+    "@types/lodash.maxby": "^4.6.7",
+    "@types/lodash.minby": "^4.6.7",
+    "@types/lodash.range": "^3.2.7",
+    "@types/lodash.sortby": "^4.7.7",
+    "@types/lodash.toarray": "^4.4.7",
+    "@types/lodash.uniqby": "^4.7.7",
+    "@types/webpack": "^5.28.1",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.45.0",
+    "eslint-plugin-powerbi-visuals": "^0.8.1",
+    "jasmine": "^5.0.2",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-webpack": "^5.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
+    "playwright": "^1.36.1",
+    "powerbi-visuals-api": "~5.4.0",
+    "powerbi-visuals-tools": "^4.3.3",
+    "powerbi-visuals-utils-testutils": "^6.0.1",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2"
   }
 }
