--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,16 @@ name: build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev, certification]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev, certification ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x, 20.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -23,6 +23,8 @@ jobs:
     - run: npm audit
       continue-on-error: true
 
+    - run: npm outdated
+      continue-on-error: true
     - run: npm ci
 
     - run: npm run eslint --if-present
@@ -31,6 +33,6 @@ jobs:
 
     - run: npm run package
 
-    - run: npm run test
+    - run: npm test
       env:
         CI: true
